--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@fontsource-variable/inter": "^5.2.8",
+    "@fontsource-variable/montserrat": "^5.2.8",
+    "@fontsource/lato": "^5.2.7",
+    "@hookform/resolvers": "^5.2.2",
     "framer-motion": "^12.23.26",
+    "lucide-react": "^0.559.0",
     "next": "16.0.8",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-hook-form": "^7.68.0",
+    "react-icons": "^5.5.0",
+    "resend": "^6.6.0",
+    "sonner": "^2.0.7",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
